# PR-Reviewer

./: LICENSE  README.md  pr_reviewer.yaml  pyproject.toml
examples/: sample.patch
llm_pr_reviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pr_reviewer/: diff_parser.py  llm.py  main.py  post_comment.py  util.py
pr_reviewer/formatters/: github.py
pr_reviewer/reviewers/: security.py  style.py
scripts/: run_local.sh
src/analyzers/: llm_suggester.py  style.py
tests/: test_diff_parser.py
